<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailHero">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/TextContent.HeadlineMedium.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heroes_name"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_detail_power"
            style="@style/TextContent.BodyMedium.Gray.MarginLeftRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_detail_durability"
            style="@style/TextContent.BodyMedium.Gray.MarginLeftRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/durability"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_detail_description"
            style="@style/TextContent.BodyMedium.Gray.MarginLeftRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:lineSpacingMultiplier="1"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tv_detail_info"
            style="@style/TextContent.BodyMedium.Gray.MarginLeftRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1"
            android:text="@string/info"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:layout_marginBottom="8dp"
            android:text="@string/item" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/kategori" />

                <TextView
                    style="@style/TextContent.BodyMedium.Gray"
                    android:layout_weight="1"
                    android:text="@string/content_specs_kategori" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/dapat" />

                <TextView
                    style="@style/TextContent.BodyMedium.Gray"
                    android:layout_weight="1"
                    android:text="@string/konten_dapat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/penggunaan" />

                <TextView
                    style="@style/TextContent.BodyMedium.Gray"
                    android:layout_weight="1"
                    android:text="@string/konten_penggunaan" />
            </TableRow>

            <Button
                android:id="@+id/action_share"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Share"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

        </TableLayout>
    </LinearLayout>
</ScrollView>